--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="info__header equipment__header">
                             <div class="info__title equipment__title">
                                 <h2 class="info__text">[Оборудование]</h2>
-                                <h3 class="equipment__description">Наше оборудование  отличается высокой  надёжностью и всегда  работает безотказно</h3>
+                                <h3 class="equipment__description">Наше оборудование отличается высокой надёжностью и всегда работает безотказно</h3>
                             </div>
                             <div class="info__description equipment__cards">
                                 <div class="equipment__card equipment__card-big">
@@ -314,11 +314,11 @@
                                 <h3 class="description__title">Компания является одним из ведущих поставщиков подземного и наземного оборудования на рынке</h3>
                                 <div class="description__body">
                                     <div class="description__content">
-                                        <p class="description__text">Мы предлагаем широкий ассортимент оборудования и комплектующих. Осуществляем маркетинговую и коммерческую деятельность для обеспечения эффективного взаимодействия между производителями и потребителями.</p>
+                                        <p class="description__text">Мы предлагаем широкий ассортимент услуг в виде монтажа и ремонта оборудования. Осуществляем установку и полное обслуживание для обеспечения эффективной работы нашего оборудования.</p>
                                     </div>
                                     <div class="description__content">
-                                        <p class="description__text">Наша компания специализируемся на реализации продукции, производимой машиностроительными предприятиями партнерам, маркетинговой и коммерческой деятельностью.</p>
-                                        <p class="description__text">Мы работаем в тесном сотрудничестве с ведущими компаниями на рынке. Наши партнеры уверены в нашей надежности.</p>
+                                        <p class="description__text">Наши опытные специалисты готовы предложить индивидуальные решения для любых задач и обеспечить качественное выполнение всех работ.</p>
+                                        <p class="description__text">Мы постоянно совершенствуем свои навыки и следим за инновациями в  отрасли, чтобы предоставлять нашим клиентам самые современные и  эффективные услуги.</p>
                                     </div>
                                 </div>
                             </article>
