--- a/vacancies.html
+++ b/vacancies.html
@@ -214,7 +214,7 @@
                                 <div class="vacansy__button">
                                     <a href="#form">
                                         <button class="welcome__button">
-                                            <span class="welcome__button-name">Отклкнуться</span>
+                                            <span class="welcome__button-name">Откликнуться</span>
                                             <img src="./img/icons/double_arrow.svg" alt="double_arrow" class="welcome__button-img">
                                         </button>
                                     </a>
@@ -235,7 +235,7 @@
                                 <div class="vacansy__button">
                                     <a href="#form">
                                         <button class="welcome__button">
-                                            <span class="welcome__button-name">Отклкнуться</span>
+                                            <span class="welcome__button-name">Откликнуться</span>
                                             <img src="./img/icons/double_arrow.svg" alt="double_arrow" class="welcome__button-img">
                                         </button>
                                     </a>
