--- a/сonveyors.html
+++ b/сonveyors.html
@@ -241,7 +241,7 @@
                                 
                             </div>
                             <article class="info__description description">
-                                <h3 class="description__title">Цепные скребковые конвеейеры</h3>
+                                <h3 class="description__title">Цепные скребковые конвейеры</h3>
                                 <div class="description__body">
                                     <div class="description__content">
                                         <p class="description__text">Это техническое устройство, в котором функцию грузонесущего органа выполняет цепь со скребками (одним или двумя). Этот конвейер предназначен для перемещения насыпных грузов, включая транспортировку под углом наклона, на открытых площадках, под навесами и даже во взрывоопасных помещениях.</p>
