--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js/hide_menu.js" defer></script>
     <script src="./js/form_hendling.js" defer></script>
     <script src="./js/header_scroll.js" defer></script>
+    <script src="./js/phone_mask.js" defer></script>
 </head>
 <body class="body">
     <div class="wrapper">
@@ -121,7 +122,7 @@
                 <div class="container">
                     <div class="welcome__content">
                         <div class="welcome__cta">
-                            <p class="welcome__company-name">ООО«НмзСпецстрой»</p>
+                            <p class="welcome__company-name">ООО «НМЗ СПЕЦСТРОЙ»</p>
                             <h1 class="welcome__description">Надёжный поставщик оборудования для наземных и подземных условий</h1>
                             <a href="#form">
                                 <button class="welcome__button">
@@ -539,6 +540,20 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [07]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img loading="lazy" src="./img/imgs/collaborations/fasagro.png" alt="ФАСАГРО" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -572,7 +587,7 @@
                                                     <input type="tel" name="number" id="number" class="form__input _req _number" placeholder="Номер">
                                                 </div>
                                                 <div class="form__item">
-                                                    <input type="text" name="company" id="company" class="form__input _req _company" placeholder="Компания">
+                                                    <input type="text" name="company" id="company" class="form__input _company" placeholder="Компания">
                                                 </div>
                                                 <div class="form__item">
                                                     <textarea placeholder="Коментарий" type="text" name="message" id="message" class="form__input _req _message"></textarea>
