add video for different browsers

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
             </section>
             <div class="about__image-container">
                 <video autoplay loop muted class="background__video" id="background__video">
+                    <source src="./video/second_section.mp4" type="video/mp4"></source>
                     <source src="./video/second_section.webm" type="video/webm"></source>
                 </video>
             </div>
@@ -717,6 +718,7 @@
             <img class="background__img" src="./img/background/first_section.png" alt="Главный экран">
             <video autoplay loop muted class="background__video" id="background__video">
                 <source src="./video/first_section.mp4" type="video/mp4"></source>
+                <source src="./video/first_section.webm" type="video/webm"></source>
             </video>
         </div>      
     </div>
