--- a/сonveyors.html
+++ b/сonveyors.html
@@ -10,8 +10,18 @@
     <script src="./js/hide_menu.js" defer></script>
     <script src="./js/form_hendling.js" defer></script>
     <script src="./js/header_scroll.js" defer></script>
+    <script src="./js/loader.js" defer></script>
 </head>
 <body class="body">
+    <div class="loader">
+        <div class="loader__content">
+            <img src="./img/imgs/pages/loader/loader_logo.png" alt="НМЗ Логотип" class="loader-logo">
+            <div class="loader-bar__content">
+                <div class="loader-bar__line"></div>
+                <span class="loader-bar__percent">0%</span>
+            </div>
+        </div>
+    </div>
     <div class="wrapper">
         <nav class="menu-mobile menu-mobile__hide">
             <div class="container">
@@ -448,7 +458,7 @@
                             </div>
                             <div class="footer__developers">
                                 <p class="footer__description">SITE BY: MVP PRODUCTION</p>
-                                <img loading="lazy" src="./img/icons/mvp_logo.svg" alt="" class="footer__logo">
+                                <img  src="./img/icons/mvp_logo.svg" alt="" class="footer__logo">
                             </div>
                         </div>
                     </div>
