--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>НМЗ СПЕЦСТРОЙ</title>
+    <title>ООО «НМЗ СПЕЦСТРОЙ»</title>
     <link rel="icon" href="./img/icons/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
@@ -11,8 +11,18 @@
     <script src="./js/form_hendling.js" defer></script>
     <script src="./js/header_scroll.js" defer></script>
     <script src="./js/phone_mask.js" defer></script>
+    <script src="./js/loader.js" defer></script>
 </head>
 <body class="body">
+    <div class="loader">
+        <div class="loader__content">
+            <img src="./img/imgs/pages/loader/loader_logo.png" alt="НМЗ Логотип" class="loader-logo">
+            <div class="loader-bar__content">
+                <div class="loader-bar__line"></div>
+                <span class="loader-bar__percent">0%</span>
+            </div>
+        </div>
+    </div>
     <div class="wrapper">
         <nav class="menu-mobile menu-mobile__hide">
             <div class="container">
@@ -158,7 +168,7 @@
                             <div class="info__cards">
                                 <div class="info__card card">
                                     <article class="card__item">
-                                        <img loading="lazy" src="./img/imgs/arrows.png" alt="Карта России" class="card__img-first">
+                                        <img  src="./img/imgs/arrows.png" alt="Карта России" class="card__img-first">
                                         <div class="card__count">
                                             <h4 class="card__number">[01]</h4>
                                         </div>
@@ -171,7 +181,7 @@
                                 </div>
                                 <div class="info__card card">
                                     <article class="card__item">
-                                        <img loading="lazy" src="./img/imgs/map.png" alt="Карта России" class="card__img-second">
+                                        <img  src="./img/imgs/map.png" alt="Карта России" class="card__img-second">
                                         <div class="card__count">
                                             <h4 class="card__number">[02]</h4>
                                         </div>
@@ -205,7 +215,7 @@
                                 </div>
                                 <div class="info__card card">
                                     <article class="card__item">
-                                        <img loading="lazy" src="./img/imgs/house.png" alt="Карта России" class="card__img-thrid">
+                                        <img  src="./img/imgs/house.png" alt="Карта России" class="card__img-thrid">
                                         <div class="card__count">
                                             <h4 class="card__number">[03]</h4>
                                         </div>
@@ -349,7 +359,7 @@
                                             <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
                                             <div class="services__card-button">
                                                 <a class="card-btn__link" href="#form">
-                                                    <img loading="lazy" class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                    <img  class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
                                                 </a>
                                             </div>
                                         </div>
@@ -365,7 +375,7 @@
                                             <p class="services__card-description">Это процесс установки и подключения инженерных систем, таких как вентиляция и электроснабжение, в подземных шахтах, туннелях и других подземных сооружениях.</p>
                                             <div class="services__card-button">
                                                 <a class="card-btn__link" href="#form">
-                                                    <img loading="lazy" class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                    <img  class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
                                                 </a>
                                             </div>
                                         </div>
@@ -381,7 +391,7 @@
                                             <p class="services__card-description">Вентиляционные ворота обеспечивают приток свежего воздуха в помещение, противопожарные предотвращают распространение огня и дыма в случае возгорания.</p>
                                             <div class="services__card-button">
                                                 <a class="card-btn__link" href="#form">
-                                                    <img loading="lazy" class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                    <img  class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
                                                 </a>
                                             </div>
                                         </div>
@@ -397,7 +407,7 @@
                                             <p class="services__card-description">Услуга включает оценку объекта, проектирование, поставку оборудования, монтаж, подключение и настройку, тестирование и сдачу объекта.</p>
                                             <div class="services__card-button">
                                                 <a class="card-btn__link" href="#form">
-                                                    <img loading="lazy" class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                    <img  class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
                                                 </a>
                                             </div>
                                         </div>
@@ -413,7 +423,7 @@
                                             <p class="services__card-description">Проведение всех необходимых работ по установке, настройке и запуску горно-шахтного оборудования на объекте заказчика.</p>
                                             <div class="services__card-button">
                                                 <a class="card-btn__link" href="#form">
-                                                    <img loading="lazy" class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                    <img  class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
                                                 </a>
                                             </div>
                                         </div>
@@ -460,7 +470,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/fasagro.png" alt="ФАСАГРО" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/fasagro.png" alt="ФАСАГРО" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -474,7 +484,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/lukoil.png" alt="Лукойл" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/lukoil.png" alt="Лукойл" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -488,7 +498,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/gazprom.png" alt="Газпром" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/gazprom.png" alt="Газпром" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -508,7 +518,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/sibur.png" alt="Сибур" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/sibur.png" alt="Сибур" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -522,7 +532,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/rosneft.png" alt="Роснефть" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/rosneft.png" alt="Роснефть" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -536,7 +546,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/tatneft.png" alt="Татнефть" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/tatneft.png" alt="Татнефть" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -550,7 +560,7 @@
                                         </div>
                                         <div class="collaborations__card-body">
                                             <div class="collaborations__card-logo">
-                                                <img loading="lazy" src="./img/imgs/collaborations/ural_kali.png" alt="Урал Калий" class="collaborations__card-img">
+                                                <img  src="./img/imgs/collaborations/ural_kali.png" alt="Урал Калий" class="collaborations__card-img">
                                             </div>
                                         </div>
                                     </div>
@@ -706,7 +716,7 @@
                             </div>
                             <div class="footer__developers">
                                 <p class="footer__description">SITE BY: MVP PRODUCTION</p>
-                                <img loading="lazy" src="./img/icons/mvp_logo.svg" alt="" class="footer__logo">
+                                <img  src="./img/icons/mvp_logo.svg" alt="" class="footer__logo">
                             </div>
                         </div>
                     </div>
