add php script for different send mails

--- a/vacancies.html
+++ b/vacancies.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
     <script src="./js/hide_menu.js" defer></script>
-    <script src="./js/form_hendling.js" defer></script>
+    <script src="./js/form_hendling_work.js" defer></script>
     <script src="./js/header_scroll.js" defer></script>
     <script src="./js/phone_mask.js" defer></script>
     <script src="./js/loader.js" defer></script>
@@ -266,7 +266,7 @@
                         </div>
                         <div class="form__main">
                             <div class="form__header">
-                                <h2 class="form__title">Получите бесплатную<br> консультацию</h2>
+                                <h2 class="form__title">Оставьте свой отклик<br>на вакансию</h2>
                                 <p class="form__description">Если у вас остались вопросы, можете<br> задать их нашим специалистам</p>
                             </div>
                             <div class="form__body">
