fix bugs with styles

--- a/сonveyors.html
+++ b/сonveyors.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>НМЗ СПЕЦСТРОЙ</title>
     <link rel="icon" href="./img/icons/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <script src="./js/hide_menu.js" defer></script>
-    <script src="./js/form_hendling.js" defer></script>
-    <script src="./js/header_scroll.js" defer></script>
-    <script src="./js/phone_mask.js" defer></script>
-    <script src="./js/loader.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css?v=2.0">
+    <link rel="stylesheet" href="./css/reset.css?v=2.0">
+    <script src="./js/hide_menu.js"?v=2.0 defer></script>
+    <script src="./js/form_hendling.js?v=2.0" defer></script>
+    <script src="./js/header_scroll.js?v=2.0" defer></script>
+    <script src="./js/phone_mask.js?v=2.0" defer></script>
+    <script src="./js/loader.js?v=2.0" defer></script>
 </head>
 <body class="body">
     <div class="loader">
